hphp/test/zend/bad/ext/filter/tests/bug52209.php
<?php
	var_dump(filter_input(INPUT_ENV, 'PWD'));
?>